# libdot

./: AUTHORS  ChangeLog  DESIGN  Makefile.in  README.md  README.status  USECASES  WEBSITE  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
Debug/: Makefile  config.h  config.status  libtool
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile  libdot-0.1.pc
Debug/src/.deps/: dot.Plo  dot_test1.Po  libdot_la-dot.Plo
Optimized/: Makefile  config.h  config.status  libtool
Optimized/po/: Makefile  Makefile.in
Optimized/src/: Makefile  libdot-0.1.pc
Optimized/src/.deps/: libdot_la-dot.Plo
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
libdot_cpp11_prod/: CMakeLists.txt  DESIGN.txt  Makefile  README.md
libdot_cpp11_prod/examples/: dot_dump.cpp
libdot_cpp11_prod/include/libdot/: dot.hpp  dot_c_api.h
libdot_cpp11_prod/packaging/: pkgconfig-dot.pc.in
libdot_cpp11_prod/src/: dot.cpp  dot_c_api.cpp
libdot_cpp11_prod/tests/: smoke.sh  test_dot.cpp
src/: Makefile.am  Makefile.in  astyle.bash  dot.c  dot.c~  dot.h  dot.h~  libdot-0.1.pc.in
src/old/: dot.c
tests/: Makefile  dot_test1  dot_test1.c  dot_test1.c~  dot_test2.c  dot_test3.c  result.out
